mobile tweaks: LOG IN size, autoplay spacing, deleted-x size, QR fix, video list spacing
- Restore LOG IN/OUT text to original size on mobile (auth-link class, font-size: 1rem)
- Add vertical spacing around autoplay checkbox row on mobile (autoplay-row class)
- Move deleted-channel x graphic from inline style to CSS class (deleted-x); 10% width on mobile, 4% desktop
- Fix crypto QR codes distorted by thumbnail aspect-ratio filter (qr-code class)
- Tighten spacing between video title and date/views line in watch sidebar (video-meta h5)
- Add bottom margin after date/views line in watch sidebar for inter-item breathing room

--- a/alt2/static/css/default.css
+++ b/alt2/static/css/default.css
@@ -86,6 +86,22 @@ img.thumbnail {
   object-fit: cover;
 }
 
+h5.video-meta {
+  margin-top: 0.2em;
+  margin-bottom: 1.75em;
+}
+
+img.deleted-x {
+  width: 4%;
+  aspect-ratio: auto;
+  object-fit: initial;
+}
+
+img.qr-code {
+  aspect-ratio: auto;
+  object-fit: initial;
+}
+
 img.channel-thumb {
   width: 90%;
   aspect-ratio: 1 / 1;
@@ -297,6 +313,10 @@ input[type="search"]::-webkit-search-cancel-button {
     font-size: 1.15em;
   }
 
+  .navbar > .user-field .auth-link {
+    font-size: 1rem;
+  }
+
   /* search: full-width second row */
   .navbar > .searchbar {
     order: 3;
@@ -307,6 +327,15 @@ input[type="search"]::-webkit-search-cancel-button {
 
   .navbar > .searchbar > form {
     width: 100%;
+  }
+
+  .autoplay-row {
+    margin-top: 0.75em;
+    margin-bottom: 0.75em;
+  }
+
+  .deleted-x {
+    width: 10%;
   }
 }
 
